--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
         </title>
 
     </head>
+     <div> donbei<ul>
+            <li><a href="page1.html">Page 1</a></li>
+            <li><a href="page2.html">Page 2</a></li>
+            <li><a href="page3.html">Page 3</a></li>
+        </ul> imboyo</div>
     <body>
         
     </body>
-<<<<<<< HEAD
     <h1> ephraim est là</h1>
-=======
-    <h1> jean marie</h1>
->>>>>>> titre1
 </html>
