--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         
         <title>page 1
         </title>
-
+ <script src="style.css"></script>
     </head>
      <div> donbei<ul>
             <li><a href="page1.html">Page 1</a></li>
@@ -12,7 +12,9 @@
             <li><a href="page3.html">Page 3</a></li>
         </ul> imboyo</div>
     <body>
-        
+        <div>
+            couleur
+        </div>
     </body>
     <h1> ephraim est là</h1>
 </html>
